--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   carousel_slider: ^4.1.1
   get: ^4.6.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
